Remove pools stats from historical endpoint
